@@ -50,14 +50,14 @@ static struct dbg_cmd_t COMMANDS[] = {
 	{ "delete", "d", cmdfunc_delete, "Delete a breakpoint or a watchpoint via its ID. Syntax:\n\t(d|delete) <type> {id}\n\n\ttype: 'b' for breakpoint or 'w' for watchpoint.\n\tid: the *optional* id of the breakpoint or watchpoint you want to delete.\n\tIf you don't include it, you'll be given the option to delete all breakpoints or watchpoints." },
 	{ "detach", NULL, cmdfunc_detach, "Detach from the debuggee." },
 	{ "disassemble", "dis", cmdfunc_disassemble, "Disassemble memory from the debuggee. Syntax:\n\tdisassemble <location> <numlines>.\n\n\tPass --no-aslr to keep ASLR from being added to the location." },
-	{ "examine", "x", cmdfunc_examine, "Examine debuggee memory. Syntax:\n\t(examine|x) <location> <count>\n\n\tPass --no-aslr to keep ASLR from being added to the location." },
+	{ "examine", "x", cmdfunc_examine, "Examine debuggee memory. Syntax:\n\t(examine|x) (location|register) <count>\n\n\tIf you want to view a register, prefix it with '$'. ASLR will not be accounted for.\n\n\tPass --no-aslr to keep ASLR from being added to the location." },
 	{ "help", NULL, cmdfunc_help, "Get help for a specific command." },
 	{ "kill", NULL, cmdfunc_kill, "Kill the debuggee." },
 	{ "quit", "q", cmdfunc_quit, "Quit iosdbg." },
 	{ "regs", NULL, NULL, NULL },
 	{ "regs float", NULL, cmdfunc_regsfloat, "Show a floating point register. Syntax:\n\tregs float <reg1 reg2 ...>\n\n\tYou can list as many floating point registers as you want." },
 	{ "regs gen", NULL, cmdfunc_regsgen, "Show general purpose registers. Syntax:\n\tregs gen {reg1 reg2 ...}\n\n\tThe argument is optional. All general purpose registers are dumped if there is no argument.\n\tYou can list as many general registers as you want." },
-	{ "set", NULL, cmdfunc_set, "Set the value of memory or a configuration variable for the debugger. Syntax:\n\tset (*offset|variable)=value\n\n\tYou must prefix an offset with '*'.\n\n\tIf you want your value to be intepreted as hex, use '0x'.\n\n\tPass --no-aslr to prevent ASLR from being added." },
+	{ "set", NULL, cmdfunc_set, "Modify debuggee memory, registers, or a configuration variable (TODO) for the debugger. Syntax:\n\tset (*offset|$register|variable)=value\n\n\tYou must prefix an offset with '*'.\n\tYou must prefix a register with '$'.\n\n\tIf you want to write to one of the 128 bit V registers, format value like this:\n\t\"{byte1 byte2 byte3 byte4 byte5 byte6 byte7 byte8 byte9 byte10 byte11 byte12 byte13 byte14 byte15 byte16}\".\n\n\tIf you want your value to be intepreted as hex, use '0x'.\n\n\tPass --no-aslr to prevent ASLR from being added." },
 	{ "stepi", NULL, cmdfunc_stepi, "Step into the next instruction." },
 	{ "thread", NULL, NULL, NULL },
 	{ "thread list", NULL, cmdfunc_threadlist, "List threads from the debuggee." },
